KIALI-1542 Improve namespaces graph endpoint
